--- a/INSTALL
+++ b/INSTALL
@@ -1,2 +1,3 @@
 Put all files exept for "pacman-export" in $PREFIX/share/doc/pacman-export
 Put "pacman-export" in $PREFIX/bin
+If needed, update the prefix variable in "pacman-export" to the new prefix
